2009-06-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx: Fix mixed eol-style and remove a printf.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Download.aspx.cs: Don't use WriteFile, manually
	write the file instead. Fixes an issue with apache since
	we delete the file just after serving it.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Download.aspx.cs: Add support for downloading revision
	logs and diffs.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile:
	* WebServices.asmx:
	* Download.aspx.cs: Add support for storing files outside
	of the database.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx: Remove some printfs.

2009-06-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx: Fix typo in sql statement.

2009-06-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile: Create destination directory before trying 
	to copy files to it.
