@@ -1,3 +1,9 @@
+2009-06-08  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* FileUtilities: Tweaking the md5 -> path generation once
+	more, only create two top level directories and put
+	files in there.
+
 2009-06-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* FileUtilities.cs: GZUncompress: return a boolean value
